# NASTRAN-search

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  TEST_RESULTS.md  pyproject.toml  railway.toml  start.sh
.claude/tracking/: charts.html  tokens.json
data/chromadb/: chroma.sqlite3
data/chromadb/e82b174a-8e5c-4167-9f8b-b60a61418850/: index_metadata.pickle
data/indices/: call_graph.json  common_blocks.json
docs/: 2026-03-03-legacylens-web-ui-design.md  ARCHITECTURE.md  CHUNKING_STRATEGIES.md  COST_ANALYSIS.md  PERFORMANCE.md  PRD-MVP.md  PRD.md  WEB-UI-SETUP.md  pre-search-legacylens.md
docs/plans/: 2026-03-03-code-snippet-buttons.md  2026-03-03-web-ui-redesign.md  2026-03-06-enriched-glossary.md
evals/: README.md  __init__.py  evaluators.py  golden_dataset.json  labeled_dataset.json  run_eval.py  run_langsmith_experiment.py  upload_dataset.py
src/legacylens/: api.py  cli.py  config.py
src/legacylens/index/: call_graph.py  common_blocks.py
src/legacylens/ingest/: chunker.py  discovery.py  embedder.py  metadata.py  pipeline.py  preprocess.py  storage.py
src/legacylens/search/: context.py  generator.py  retriever.py
src/legacylens/web/: index.html
tests/: benchmark.py
tests/unit/: test_call_graph.py  test_chunker.py  test_common_blocks.py  test_discovery.py  test_evaluators.py  test_integration.py  test_metadata.py  test_nastran_files.py  test_preprocess.py  test_retriever_patterns.py
