[project]
name = "legacylens"
version = "0.1.0"
description = "RAG pipeline for understanding legacy FORTRAN codebases"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "voyageai>=0.3.0",
    "openai>=1.0.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
legacylens = "legacylens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legacylens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
